# wundernut-vol5

./: README.md
examples/Clojure/: project.clj
examples/Clojure/src/pahkina5/: core.clj
examples/Elixir/: README.md  mix.exs
examples/Elixir/config/: config.exs
examples/Elixir/lib/: solver.ex  wunderpahkina.ex
examples/Elixir/test/: wunderpahkina_test.exs
examples/Haskell/: README.md  secret.cabal
examples/Haskell/app/: Main.hs
examples/Haskell/src/: Lib.hs
examples/JS/: index.html
examples/bash/: read_secret_message.sh  secret_message.txt
other_solutions/c64_henri_lauronen/: c64rgb  readme.txt  wunder.asm  wunder.prg
other_solutions/clojure_sampo_toiva/: core.clj
other_solutions/fs_mikko_matilainen/: .gitignore  Dockerfile  Program.fs  README.md  bitbucket-pipelines.yml  nuget.config  project.json  readme.txt
other_solutions/go_kasper_koho/: main.go
other_solutions/java_antti_paallysaho/: WinterMessage.java
other_solutions/js_eero_anttila/: pahkina.html
other_solutions/js_joao_carlos/: LICENSE  README.md  constants.js  index.html  readme.txt  solver.js  styles.css  ui.js
other_solutions/matlab_reko_hynonen/: crackmessage5.m  draw.m
other_solutions/python_jussi_timonen/: readme.txt  wundernut.py
other_solutions/python_tuomas_rasanen/: secret-message.py
other_solutions/ruby_stephan_sykes/: README.md  a.rb  index.html  secret.css
winning_solution/python_antti_haapala/: ratkaisu.txt  solve.py
