name:                secret
version:             0.1.0.0
synopsis:            Generates gif solution
description:         Please see README.md
homepage:            https://github.com/
license:             BSD3
license-file:        LICENSE
author:              Ari Paasonen
copyright:           2016 Ari Paasonen
category:            Nut
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , JuicyPixels
  default-language:    Haskell2010

executable secret-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , secret
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/
